# navisworks-mcp

./: .gitignore  .gitmodules  README.md
addin/NavisworksMcpAddin/: CSharpRuntime.cs  McpLog.cs  McpProcessManager.cs  McpWebSocketClient.cs  NavisworksCommandRequest.cs  NavisworksCommandResponse.cs  NavisworksMcpAddin.csproj  NavisworksMcpPlugin.cs  NavisworksMcpRibbon.xaml  NavisworksMcpRuntime.cs  NgrokProcessManager.cs  PackageContents.xml.template  SettingsForm.cs
addin/NavisworksMcpProbe/: NavisworksMcpProbe.cs  NavisworksMcpProbe.csproj
addin/RevitMcpAddin/: App.cs  CSharpRuntime.cs  McpExternalEventHandler.cs  McpLog.cs  (+5 more)
config/: mcp-client.example.json
docs/: index.html  styles.css
installer/: NavisworksMcp.iss
python/: pyproject.toml
python/navisworks_mcp/: __init__.py  fake_navisworks_client.py  launcher.py  navisworks_connection.py  navisworks_loader.py  protocol.py  server.py
python/revit_mcp/: __init__.py  fake_revit_client.py  launcher.py  protocol.py  revit_connection.py  server.py
scripts/: build-server-exe.ps1  check-release-layout.ps1  diagnose-installed-plugin.ps1  diagnose-navisworks-plugin.ps1  fetch-cloudflared.ps1  fetch-ngrok.ps1  find-navisworks.ps1  find-revit.ps1  install-addin.ps1  load-navisworks-addin.ps1  package-addins.ps1  package-release.ps1  run-http-server.ps1  run-server.ps1  test-navisworks-context.ps1  test-python.ps1  uninstall-addin.ps1  verify-windows.ps1  watch-navisworks-addin.ps1  write-mcp-config.ps1
tests/: test_navisworks_connection.py  test_navisworks_server.py  test_revit_connection.py
(+3 files in other folders)
