[project]
name = "navisworks-mcp"
version = "0.1.0"
description = "MCP server that forwards C# snippets to a Navisworks plugin over localhost WebSocket."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.12.4",
    "websockets>=12.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0",
    "pytest>=8.0",
]

[project.scripts]
navisworks-mcp = "navisworks_mcp.server:main"
navisworks-mcp-launcher = "navisworks_mcp.launcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
